--- a/complex/style.css
+++ b/complex/style.css
@@ -129,7 +129,7 @@ footer {
   font-weight: 500;
   font-family: sans-serif;
   font-size: 20px;
-  color: #343434;
+  color: #a8a8a8;
 }
 
 @media (max-width: 500px) {
